# ver12

./: .env.example  .env.production  .gitignore  .replit  DEPLOYMENT_GUIDE.md  PERFORMANCE_REPORT.md  add_holidays.py  admin.py  app.py  apt.txt  auth.py  backup_database.py  create_admin.py  create_employees.py  create_system_manual.py  create_test_employees.py  create_workflow_report.py  debug_vacation_counter.py  deploy_setup.py  deployment_checklist.json  employee.py  forms.py  holidays.py  models.py  nixpacks.toml  optimize_performance.py  pyproject.toml  railway-deployment-guide.md  railway.json  render-build-fix.md  render-deployment-guide.md  render-fix-command.md  render.yaml  replit.md  requirements-railway.txt  requirements-render.txt  requirements.txt  reset_passwords.py  routes.py  start.sh  (+8 more)
attached_assets/: 11재직증명서_김영희_20250425 (1).docx  Pasted--Cloning-from-https-github-com-sangjinlee12-lsj2421-Checking-out-commit-be816a63fe21310e88-1745327058895.txt  Pasted--Cloning-from-https-github-com-sangjinlee12-lsj2421-Checking-out-commit-e734fd7debd09b309b-1745327206673.txt  Pasted--Cloning-from-https-github-com-sangjinlee12-ver7-Checking-out-commit-707f0eba37cfe75b21da9-1754403474541_1754403474541.txt  재직증명서_김영희_20250422.docx  재직증명서_김테스트_20250812_1755003945662.docx
instance/: backup_vacation_20250810_134834.db  vacation.db  vacation_permanent.db  vacation_permanent.db-shm  vacation_permanent.db-wal
templates/: base.html  base_gov.html  base_gov_new.html  dashboard.html  error.html  login.html  login_gov.html  login_gov_new.html  manual.html  register.html  (+1 more)
(+34 files in other folders)
